2007-05-25  Jordi Mas <jmas@softcatala.org>

	* LINGUAS: Added 'ca'.
	* ca.po: Added Catalan translation by Joan Duran <jodufi@gmail.com>

2007-05-17  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* LINGUAS: Added 'fr'.
	* fr.po: Added French translation by Claude Paroz, Robert-André
	Mauchin and Stéphane Raimbault.

2007-05-15  David Lodge <dave@cirt.net>

	* en_GB.po: Updated British English translation

2007-05-15  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation

2007-05-14  Subhransu Behera  <arya_subhransu@yahoo.co.in>

	* LINGUAS: Added Oriya (or) to the list.
	* or.po: Added and Updated Oriya Translation.

2007-05-10  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation

2007-05-08  Kjartan Maraas  <kmaraas@gnome.org>

	* LINGUAS: Add nb
	* nb.po: Add this here.

2007-05-07  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation

2007-05-04  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* es.po: Added Spanish translation
	* LINGUAS: Added es

2007-05-2  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2007-04-25  David Lodge <dave@cirt.net>

	* en_GB.po: Updated British English translation

2007-04-22  David Lodge <dave@cirt.net>

	* en_GB.po: Added British English translation
	* LINGUAS: Added en_GB

2007-04-22  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.
	* POTFILES.in: Added missing file.

2007-04-21  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2007-04-21  A S Alam <aalam@users.sf.net>

	* pa.po: Punjabi Translation is added
	* LINGUAS: Punjabi (pa) is added

2007-04-15  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2007-04-14 Eitan Isaacson  <eitan@ascender.com>

	* he.po: Updated Hebrew translation.

2007-04-14 Eitan Isaacson  <eitan@ascender.com>

	* he.po: Updated Hebrew translation.
