@@ -1,16 +1,19 @@
 [encoding: UTF-8]
 accerciser.desktop.in.in
 accerciser.schemas.in
-plugins/interface_view.glade
-plugins/interface_view.py
-plugins/event_monitor.glade
-plugins/event_monitor.py
 plugins/api_view.py
 plugins/console.py
-plugins/script_recorder.py
+plugins/event_monitor.glade
+plugins/event_monitor.py
+plugins/interface_view.glade
+plugins/interface_view.py
 plugins/script_recorder.glade
+plugins/script_recorder.py
 src/accerciser.glade
-src/lib/accerciser/accessible_treeview.py
 src/lib/accerciser/accerciser.py
-src/lib/accerciser/plugin_manager.py
+src/lib/accerciser/accessible_treeview.py
 src/lib/accerciser/hotkey_manager.py
+src/lib/accerciser/plugin/base_plugin.py
+src/lib/accerciser/plugin/message.py
+src/lib/accerciser/plugin/plugin_manager.py
+src/lib/accerciser/plugin/view.py
