@@ -1,3 +1,8 @@
+2007-05-27  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+	* POTFILES.in: Added missing files.
+
 2007-05-25  Jordi Mas <jmas@softcatala.org>
 
 	* LINGUAS: Added 'ca'.
